<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center">

	<Button android:text="@string/color" android:id="@+id/color"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<Button android:text="@string/left" android:id="@+id/left"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<Button android:text="@string/right" android:id="@+id/right"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<Button android:text="@string/indeter" android:id="@+id/indeter"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

</LinearLayout>
